modulando el css

--- a/spring2/views/productDetail.html
+++ b/spring2/views/productDetail.html
@@ -20,12 +20,10 @@
             </div>
             <nav>
                 <ol>
-                    <li><a href="">link 1</a></li>
-                    <li><a href="">link 2</a></li>
-                    <li><a href="">link 3</a></li>
-                    <li><a href="">link 4</a></li>
-                    <li><a href="">link 5</a></li>
-                    <li><a href="">link 6</a></li>
+                    <li><a href="">Productos</a></li>
+                    <li><a href="">Categorias</a></li>
+                    <li><a href="">Ofertas</a></li>
+                    <li><a href="">Contacto</a></li>
                 </ol>
             </nav>
             <div class="botones">
