--- a/spring2/public/css/style.css
+++ b/spring2/public/css/style.css
@@ -1,4 +1,6 @@
 @import url("general.css");
+@import url("header.css");
+@import url("footer.css");
 @import url("home.css");
 @import url("productDetail.css");
 @import url("productCart.css");
