--- a/spring2/public/css/footer.css
+++ b/spring2/public/css/footer.css
@@ -10,11 +10,13 @@ footer section{
 }
 
 footer h4{
+    text-transform: capitalize;
     margin-bottom: 5px;
     font-size: 18px;
 }
 
 footer p{
+    text-transform: capitalize;
     line-height: 23px;
 }
 
