--- a/spring2/public/css/style.css
+++ b/spring2/public/css/style.css
@@ -4,3 +4,5 @@
 @import url("productCart.css");
 @import url("register.css");
 @import url("login.css");
+@import url('header.css');
+@import url('footer.css');
