--- a/spring2/views/home.html
+++ b/spring2/views/home.html
@@ -85,7 +85,40 @@
         </div>
     </section>
     <section class="mid-banner">
+            <img src="/img/mid-banner-agvsha.jpeg" alt="">
             <h1 class="md-name">AGVSHAINK</h1>
+    </section>
+    <div class="box-linea2">
+        <hr class="linea2">
+    </div>
+    <article class="ig">
+        <i class="fab fa-instagram"></i>
+        <h3>#INSTAGRAM</h3>
+        <div class="frase-ig">
+            <p>¡ Seguinos en nuestro instragram y enterate de todos los nuevos looks !</p>
+        </div>
+    </article>
+    <section class="catalogo-productos">
+        <article class="producto1">
+            <div>
+                <img src="/img/camperonblue.jpeg" alt="">
+            </div>
+        </article>
+        <article class="producto2">
+            <div>
+                <img src="/img/remeraDiablillo.jpg" alt="">
+            </div>
+        </article>
+        <article class="producto3">
+            <div>
+                <img src="/img/camperonRed.jpeg" alt="">
+            </div>
+        </article>
+        <article class="producto4">
+            <div>
+                <img src="/img/remeraDiablillo2.jpg" alt="">
+            </div>
+        </article>
     </section>
     <footer>
         <div>
