--- a/spring2/public/css/general.css
+++ b/spring2/public/css/general.css
@@ -15,3 +15,10 @@ ul, ol{
     text-decoration: none;
     list-style-type: none;
 }
+
+@font-face {
+    font-family: "Crenzo";
+    font-style: normal;
+    font-weight: normal;
+    src: url("/fonts/CRENZO.ttf") format("truetype");
+}
