--- a/spring2/public/css/home.css
+++ b/spring2/public/css/home.css
@@ -1,22 +1,8 @@
-/* *********************** */
-
-.home .slider {
-    display: none;
+.home {
+    box-sizing: border-box;
+    background-color: var(--color-negro);
+    margin: 0px;
 }
-
-.home .slider__btn {
-    display: none;
-}
-
-.home .mid-banner img {
-    display: none;
-}
-
-.home .md-name {
-    display: none;
-}
-
-/* *********************** */
 
 .home header article{
     box-sizing: border-box;
@@ -58,10 +44,14 @@
     padding: 2px 5px 2px 10px;
 }
 
-.home {
-    box-sizing: border-box;
-    background-color: var(--color-negro);
-    margin: 0px;
+/* SLIDER */
+
+.home .slider {
+    display: none;
+}
+
+.home .slider__btn {
+    display: none;
 }
 
 /* PRODUCTOS */
@@ -153,36 +143,6 @@
     background-color: var(--color-violeta);
 }
 
-/* BANNER AGVSHAINK */
-
-/* .home .mid-banner img {
-    box-sizing: border-box;
-    color: var(--color-lila);
-    display: none;
-    border-top: 2px solid var(--color-azul);
-    border-bottom: 2px solid var(--color-azul);
-    justify-content: center;
-    align-content: center;
-    width: 100%;
-    height: auto;
-    margin: 50px auto;
-}
-
-.home .md-name {
-    display: none;
-    font-family: crenzo;
-    box-sizing: border-box;
-    width: auto;
-    font-size: 45px;
-    text-align: center;
-    margin: auto;
-    height: auto;
-    color: var(--color-lila);
-    position: relative;
-    bottom: 125px;
-    text-shadow: 3px 1px 2px #fff;
-} */
-
 .home .box-linea2 {
     display: block;
     margin: 20px;
@@ -196,6 +156,16 @@
     background-color: #fff;
     box-shadow: 0 0 5px 5px var(--color-azul),
                 0 15px 50px;
+}
+
+/* MID BANNER */
+
+.home .mid-banner img {
+    display: none;
+}
+
+.home .md-name {
+    display: none;
 }
 
 /* INSTAGRAM + TEXTO DESCRIPTIVO */
@@ -330,31 +300,6 @@
     color: #fff;
     text-transform: capitalize;
 }
-
-/* @media (min-width: 320px){
-
-    .home {
-        box-sizing: border-box;
-        width: 100%;
-    }
-
-    .home .slider {
-        display: none;
-    }
-
-    .home .slider__btn {
-        display: none;
-    }
-
-    .home .mid-banner img {
-        display: none;
-    }
-    
-    .home .md-name {
-        display: none;
-    }
-    
-} */
 
 @media (min-width: 480px){
 
