modificaciones en el form

--- a/spring2/views/login.html
+++ b/spring2/views/login.html
@@ -63,9 +63,9 @@
             </div>
             </div>
             <span>No recuerdas tu contraseña? <a href="">click aca</a></span>
-            
+            <div><button type="submit" class="btn btn-primary">Ingresar</button></div>
           </form>
-            <button type="submit" class="btn btn-primary">Ingresar</button>
+            
     
         </section>
     </main>
