--- a/spring2/views/register.html
+++ b/spring2/views/register.html
@@ -79,8 +79,9 @@
                     <label class="form-check-label" for="exampleCheck1">Recordarme</label>
                   </div>
             </div>
+            <div><button type="submit" class="btn btn-primary">Registrate</button></div>
           </form>
-            <button type="submit" class="btn btn-primary">Registrate</button>
+            
     </main>
     <div>
         <article class="insta">
