adjunto correcciones al header y links

--- a/spring2/views/home.html
+++ b/spring2/views/home.html
@@ -20,10 +20,10 @@
             </div>
             <nav>
                 <ol>
-                    <li><a href="">Productos</a></li>
-                    <li><a href="">Categorias</a></li>
-                    <li><a href="">Ofertas</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="/productCart">Productos</a></li>
+                    <li><a href="/productDetail">Categorias</a></li>
+                    <li><a href="/login">Ofertas</a></li>
+                    <li><a href="/register">Contacto</a></li>
                 </ol>
             </nav>
             <div class="botones">
