--- a/spring2/public/css/home.css
+++ b/spring2/public/css/home.css
@@ -4,7 +4,7 @@
     margin: 0px;
 }
 
-.home header article{
+/* .home header article{
     box-sizing: border-box;
     display: flex;
     width: auto;
@@ -42,7 +42,7 @@
     border-left: 1px solid black;
     font-size: 22px;
     padding: 2px 5px 2px 10px;
-}
+} */
 
 /* SLIDER */
 
@@ -264,7 +264,7 @@
 
 /* FOOTER */
 
-.home footer{
+/* .home footer{
     background-color: var(--color-gris);
     color: #fff;
     text-align: center;
@@ -299,7 +299,7 @@
     background-color: var(--color-negro);
     color: #fff;
     text-transform: capitalize;
-}
+} */
 
 @media (min-width: 480px){
 
@@ -307,7 +307,7 @@
         box-sizing: border-box;
     }
 
-    .home header article{
+    /* .home header article{
         box-sizing: border-box;
         display: flex;
         width: auto;
@@ -374,7 +374,7 @@
     .home header article .botones .barra-de-busqueda input{
         height: 20px;
         display: none;
-    }
+    } */
 
     .home .container-slider {
         display: inline-block;
@@ -476,7 +476,7 @@
         width: 100%;
     }
 
-    .home header article{
+    /* .home header article{
         box-sizing: border-box;
         display: flex;
         width: auto;
@@ -497,7 +497,7 @@
         color: #fff;
         font-size: 20px;
         margin: 8px;
-    }
+    } */
 
     .home .container-slider {
         display: inline-block;
