--- a/spring2/views/home.html
+++ b/spring2/views/home.html
@@ -15,15 +15,15 @@
                 <div class="burger-menu">
                     <i class="fas fa-bars"></i>
                 </div>
-                <h1>AGVSHAINK</h1>
+                <a href="/"><h1>AGVSHAINK</h1></a>
                 <img src="" alt="">
             </div>
             <nav>
                 <ol>
                     <li><a href="">Productos</a></li>
                     <li><a href="">Categorias</a></li>
-                    <li><a href="">Ofertas</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="/productDetail">Ofertas</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
                 </ol>
             </nav>
             <div class="botones">
@@ -32,10 +32,10 @@
                     <i class="fas fa-search"></i>
                 </div>
                 <div>
-                    <i class="fas fa-user"></i>      
+                    <a href="/login"><i class="fas fa-user"></i></a>      
                 </div>
                 <div>
-                    <i class="fas fa-shopping-bag"></i>  
+                    <a href="/productCart"><i class="fas fa-shopping-bag"></i></a>  
                 </div>               
             </div>
         </article>
@@ -121,7 +121,7 @@
         </article>
     </section>
     <footer>
-        <div>
+        <div id="contacto">
             <section>
                 <h4>Horario</h4>
                 <p>lunes a viernes de 8:00 a 17:00</p>
