--- a/spring2/public/css/header.css
+++ b/spring2/public/css/header.css
@@ -21,6 +21,7 @@ header article .burger-menu{
 header article h1{
     display: inline;
     font-size: 22px;
+    color: #fff;
 }
 
 header article nav{
@@ -36,6 +37,7 @@ header article .botones div{
     border-left: 1px solid black;
     font-size: 22px;
     padding: 2px 5px 2px 10px;
+    color: #fff;
 }
 
 @media (min-width: 769px){
