cambios header css

--- a/spring2/public/css/header.css
+++ b/spring2/public/css/header.css
@@ -24,6 +24,7 @@ header article h1{
     color: #fff;
 }
 
+
 header article nav{
     display: none;
 }
@@ -37,6 +38,9 @@ header article .botones div{
     border-left: 1px solid black;
     font-size: 22px;
     padding: 2px 5px 2px 10px;
+}
+
+header article .botones div a{
     color: #fff;
 }
 
